# fastapi-onion-template

./: README.md  algo.toml  demo.py  pyproject.toml
app/: main.py
app/api/v1/examples/: examples_controller.py  examples_router.py
app/modules/v1/example/models/: example_model.py
onion-cli/: pyproject.toml
onion-cli/onion/: main.py
onion-cli/onion/actions/: create_module.py  create_module_with_mongo_collection.py  create_mongo_collection.py  create_router_with_module.py  create_router_with_module_with_mongo.py
onion-cli/onion/templates/: controller_template.py  model_template.py  mongo_collection_template.py  mongo_service_template.py  router_template.py
onion-cli/onion/utils/: dir_utils.py
