[project]
name = "fastapi-onion-template"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "onion",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.uv.sources]
onion = { git = "https://github.com/NathanDraco22/onion-cli.git" }
